# natvis-pdbs

./: Cargo.toml  Readme.md  appveyor.yml
.github/: dependabot.yml
crates/example-crate-with-natvis/: Cargo.toml  flags.natvis
crates/example-crate-with-natvis/src/: lib.rs
crates/example-usage-build-rs/: Cargo.toml  build.rs
crates/example-usage-metabuild/: Cargo.toml
crates/example-usage-metabuild/src/: main.rs
crates/natvis-pdbs/: Cargo.toml
crates/natvis-pdbs/src/: lib.rs
scripts/: install.cmd  test.cmd
src/: lib.rs
