# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "natvis-pdbs"
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "A metabuild/build.rs compatible crate to embed .natvis debug visualizer files into your executable's .pdbs, for ease of debugging."
documentation = "https://docs.rs/natvis-pdbs/"
repository = "https://github.com/MaulingMonkey/natvis-pdbs"
readme = "README.md"
keywords = ["metabuild", "natvis", "debug"]
categories = ["development-tools::debugging"]
license = "MIT or Apache-2.0"

[dependencies]
cargo_metadata = "0.8.2"

[badges]
appveyor = { repository = "MaulingMonkey/natvis-pdbs", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }
